ingress/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: todo-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
  - http:
      paths:
      - path: /auth(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: auth-service
            port: 
              number: 8000
      - path: /api(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: todo-service
            port: 
              number: 5000
      - path: /(.*)
        pathType: Prefix
        backend:
          service:
            name: webapp-service
            port: 
              number: 80
